# C-

./: README.md  a.out  test.c
Client/: CMakeLists.txt  main.hpp
Client/SFML_ENCAP/: documentation.txt  requirements.txt
Client/SFML_ENCAP/include/: SFML_audio.hpp  SFML_graph.hpp
Client/SFML_ENCAP/src/: SFML.cpp  SFML_audio.cpp
Client/client/: CMakeLists.txt
Client/client/include/: address.hpp  client.hpp  thread.hpp
Client/client/src/: client.cpp  main.cpp  send_thread.cpp  sonar_thread.cpp
Client/game/include/: Game.hpp  SFML.hpp  Sprites_graphical.hpp
Client/game/src/: Help.cpp  Inputs.cpp  SFML_graph.cpp  animations_sprites.cpp  custom_ships.cpp  game_over.cpp  get_keys.cpp  in_game.cpp  initaliser.cpp  lobby.cpp  main.cpp  menu.cpp  power_ups.cpp  select_ship.cpp  sfml-app  tools.cpp
Client/res/Templates_custom_ship/: RTYPE _ Sprites V4.eml
Server/Config/: Bos1.json  Bos2.json  Bos3.json  EnemiesConfig.json  Enemy1.json  Enemy2.json  Enemy3.json  Level1.json  Level2.json  Level3.json  Level4.json  Level5.json  LevelGen.json
Server/ECS/include/Components/: BulletIdComp.hpp  DamageComp.hpp  DirectionComp.hpp  HealthComp.hpp  HitboxComp.hpp  ParallaxComp.hpp  PlayerIdComponent.hpp  PositionComp.hpp  PowerUpTypeComponent.hpp  PowersComp.hpp  RectComp.hpp  ScoreComp.hpp  TypeComponent.hpp  UsernameComp.hpp  (+1 more)
Server/Server/include/: binary.hpp  client.hpp  server.hpp  thread.hpp
Server/Server/src/: bookmaker.cpp  livestream_thread.cpp  loops.cpp  main.cpp  server.cpp  setUpEcs.cpp  sonar_thread.cpp  tools.cpp
Server/tests/: testServer.cpp
(+28 files in other folders)
